syntax = "proto3";

package user.v1; // 包名与目录名保持一致

// 指定 go 的包路径及包名
option go_package = "api/grpc/user/v1;v1";

service UserService{
    rpc LoginByPhone(PhoneLoginRequest) returns (PhoneLoginReply) {}
}

message PhoneLoginRequest {
    int64 Phone = 1;
    int32 VerifyCode = 2;
}

message PhoneLoginReply {
    string Ret = 1;
    string err = 2;
}

